# viewview

./: .gitignore  Cargo.toml  README.md  biome.json  ctl.sh
.github/workflows/: ci.yaml  website.yml
assets/: heatmap.js  heatmap_viewer.html  tiles.json  worker.js
crates/tasks/: Cargo.toml
crates/tasks/src/: config.rs  main.rs  max_subtile.rs  packer.rs  stitch.rs  tile.rs
crates/tasks/src/atlas/: daemon.rs  db.rs  longest_lines_index.rs  run.rs  s3.rs  status.rs  stitch_all.rs  tile_job.rs  workers.rs
crates/tasks/src/atlas/longest_lines/: grided.rs  index.rs  overview.rs  packed.rs
crates/tasks/src/atlas/machines/: cli.rs  connection.rs  digital_ocean.rs  google_cloud.rs  local.rs  machine.rs  new_machine_job.rs  vultr.rs  worker.rs
crates/tasks/src/atlas/sql/: active_machines.sql  added_tiles.sql  completed_tiles.sql  fail_machine_job.sql
scripts/: atlas.bash  cache_tiles.bash  cloud_init_ubuntu22.bash  common.bash  danger.bash  digital_ocean.bash  gdal_viewshed.bash  google_cloud.bash  make_pmtiles.bash  prepare_for_cloud.bash  s3.bash  tile_analyze.py  to_pmtiles.py  website.bash  websites.bash  world_run.bash
ssg/: .gitignore  hugo.toml  wrangler.jsonc
ssg/content/: _index.md  about.md  faq.md
website/: .gitignore  biome.json  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.ts  wrangler.jsonc
website/public/: index.html  tiles.csv  tiles.json
website/src/: App.svelte  ClickEffect.svelte  HeatmapLayer.ts  Home.svelte  Layout.svelte  LinesDump.svelte  Packing.svelte  Sidebar.svelte  Slider.svelte  TopLines.svelte  Worker.ts  (+10 more)
(+13 files in other folders)
