[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis = { version = "1.0.0-beta.2", features = ["tracing"] }
apalis-board-api = { version = "1.0.0-beta.1", features = ["axum"] }
apalis-sqlite = "1.0.0-beta.3"
async-trait = "0.1.89"
async-ssh2-tokio = "0.12.0"
axum = { version = "0.8", features = ["json", "tokio", "query"] }
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
gdal = "0.18.0"
geo = "0.31.0"
geojson = { version = "0.24.2", features = ["geo-types"] }
h3o = "0.9.4"
proj4rs = { version = "0.1.9", features = ["aeqd"] }
rstar = "0.12.2"
serde = "1.0.219"
serde_json = "1.0.143"
srtm_reader = "0.5.1"
sqlx = { version = "0.8", features = [ "runtime-tokio" ] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "ansi"] }
tower-http = { version = "0.6.7", features = ["fs", "normalize-path"] }
strip-ansi-escapes = "0.2.1"
dashmap = "6.1.0"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.22.0"
